Revert to non proxy integratio nfor the get orders endpoint.
